修复文章front-matter设置comments无效的问题

--- a/layout/post.jade
+++ b/layout/post.jade
@@ -18,4 +18,5 @@ block content
       != page.content
     
     include _partial/tag
-    include _partial/comments
+    if page.comments
+      include _partial/comments
