优化代码块自适应不同设备

--- a/layout/post.jade
+++ b/layout/post.jade
@@ -20,3 +20,5 @@ block content
     include _partial/tag
     if page.comments
       include _partial/comments
+      
+    include _partial/auto_fit
