加入底部主题地址

--- a/layout/_partial/footer.jade
+++ b/layout/_partial/footer.jade
@@ -2,3 +2,5 @@
   a(href=url_for('.'), rel='nofollow')= config.title + '.'
   |  Powered by
   a(rel='nofollow', target='_blank', href='https://hexo.io')  Hexo.
+  |  Theme
+  a(target='_blank',href='https://github.com/7ye/maupassant-hexo')  Maupassant.
