--- a/layout/base.jade
+++ b/layout/base.jade
@@ -17,7 +17,7 @@ if page.layout=='post'
   if page.description
     - var page_description = page.description;
   else
-    - var page_description = page.content.replace(/<[^>]+>/g,"").replace(/[\r\n]/g, "").substring(0, 200)
+    - var page_description = page.content.replace(/<[^>]+>/g,"").replace(/[\r\n]/g, "").substring(0, 150)
 else if page.layout=='page' || page.layout=='single-column'
   - var page_description = page.description
 else
@@ -33,6 +33,7 @@ html(lang='#{config.language}')
       meta(content='telephone=no', name='format-detection')
       meta(name='renderer', content='webkit')
       block title
+      meta(name='description', content=page_description)
       link(type='text/css', rel='stylesheet', href=url_for(theme.css)+'/basic.css?v=' + theme.version)
       link(type='text/css', rel='stylesheet', href=url_for(theme.css)+'/pure.css?v=' + theme.version)
       link(type='text/css', rel='stylesheet', href=url_for(theme.css)+'/style.css?v=' + theme.version)
