--- a/source/css/style.css
+++ b/source/css/style.css
@@ -19,23 +19,20 @@ body {
 
 /*滚动条*/
 ::-webkit-scrollbar {
-    width: 12px;
-    height: 10px;
+	width: 10px;
+	height: 10px;
 }
 ::-webkit-scrollbar-thumb {
-    height: 30px;
-    background-color: #c2c2c2;
-    -webkit-border-radius: 7px;
-    outline: 2px solid #fff;
-    outline-offset: -2px;
-    border: 2px solid #fff;
+	border-radius: 8px;
+	background-color: rgba(0,0,0,.2);
+  border: 2px solid transparent;
 }
-::-webkit-scrollbar-track-piece {
-    background-color: #f1f1f1;
-    -webkit-border-radius: 3px;
+::-webkit-scrollbar-thumb:hover {
+	border-radius: 8px;
+	background-color: rgba(0,0,0,.5)
 }
-::-webkit-scrollbar-thumb:active{
-  background-color: #7d7d7d;
+::-webkit-scrollbar-track:hover {
+	background-color: rgba(0,0,0,.15)
 }
 
 .clearfix:after, .paginator_container:after {
