--- a/source/css/style.css
+++ b/source/css/style.css
@@ -19,20 +19,33 @@ body {
 
 /*滚动条*/
 ::-webkit-scrollbar {
-	width: 10px;
-	height: 10px;
+  height: 10px;
+  width: 10px;
+  background: rgba(222,222,222,.5);
+  transition: all .3s ease-in-out;
+  border-radius: 5px
+}
+::-webkit-scrollbar-button {
+  display: none
+}
+::-webkit-scrollbar-track {
+  background-color: #fff
+}
+::-webkit-scrollbar-track:hover{
+  background-color: rgba(0,0,0,.15)
 }
 ::-webkit-scrollbar-thumb {
-	border-radius: 8px;
-	background-color: rgba(0,0,0,.2);
-  border: 2px solid transparent;
+  width: 10px;
+  min-height: 15px;
+  background: rgba(0,0,0,.3);
+  transition: all .3s ease-in-out;
+  border-radius: 5px
 }
 ::-webkit-scrollbar-thumb:hover {
-	border-radius: 8px;
-	background-color: rgba(0,0,0,.5)
+  background: rgba(0,0,0,.6)
 }
-::-webkit-scrollbar-track:hover {
-	background-color: rgba(0,0,0,.15)
+::-webkit-scrollbar-thumb:active {
+  background: rgba(0,0,0,.8)
 }
 
 .clearfix:after, .paginator_container:after {
