--- a/layout/_partial/comments.jade
+++ b/layout/_partial/comments.jade
@@ -1,6 +1,3 @@
-if theme.duoshuo
-  .ds-thread(data-thread-key=page.path, data-title=page.title, data-url=page.permalink, data-author-key='1')
-
 if theme.disqus
   #disqus_thread
     script.
@@ -13,4 +10,4 @@ if theme.disqus
         dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
         (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
       })();
-    script(id='dsq-count-scr', src='//#{theme.disqus}.disqus.com/count.js', async)
+    //script(id='dsq-count-scr', src='//#{theme.disqus}.disqus.com/count.js', async)
