--- a/layout/post.jade
+++ b/layout/post.jade
@@ -8,7 +8,7 @@ block content
     h1.post-title= page.title
     .post-meta= page.date.format('YYYY-MM-DD')
       if theme.busuanzi == true
-        script(src='https://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js',type='text/javascript')
+        script(src='https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js',type='text/javascript')
         span(class='meta-space')='  |  '
         span#busuanzi_container_page_pv
           span#busuanzi_value_page_pv
